Closed Bug 324960 Opened 20 years ago Closed 20 years ago

css "no-repeat" background image and emoticons not displayed on inlines

Categories

(Core :: Web Painting, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: regis.caspar+bz, Assigned: dbaron)

References

Details

(Keywords: regression, testcase, Whiteboard: [patch])

Attachments

(4 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060127 Firefox/1.6a1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060127 Firefox/1.6a1 Seems there is a regression from #317375. When using css "background" with "no-repeat", image isn't displayed. See testcase. Reproducible: Always Steps to Reproduce: 1. open testcase Actual Results: no background image is displayed Expected Results: background image displayed
Attached file testcase
Blocks: 317375
Assignee: nobody → roc
Status: UNCONFIRMED → NEW
Component: Layout → Layout: View Rendering
Ever confirmed: true
Flags: blocking1.9a1+
Keywords: regression
QA Contact: layout → ian
Keywords: testcase
Attached file alternative test case
This bug only seems to happen with inline elements. Attached: same test case as the reporter's, but the <a> element is set to display:block. The background image displays fine.
I'm seeing this on the Jan 27 Camino and OS X Firefox trunk nightlies. Hardware/OS -> All/All
OS: Windows XP → All
Hardware: PC → All
This works properly on the Jan 25 Camino trunk, but not the Jan 26.
The issue is probably the code at http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/base/nsCSSRendering.cpp&rev=3.275&mark=2935,2946-2948#2934 (the highlighted case is the one we fall into). I should note that this code seems to get positioned inline frames wrong... but the cause for this bug is probably that the coordinate system handling here needs to be fixed. It looks like we change around the anchor point coords much later in this method, but that's after we've computed all the tiling information, so that's probably wrong.
This might also explain Bug #325492.
*** Bug 325492 has been marked as a duplicate of this bug. ***
Getting emoticons into summary for better search results.
Summary: using css background with "no-repeat" image isn't displayed → css "no-repeat" background image and emoticons not displayed
This breaks the "external link" images on MediaWiki pages, which have CSS like #mBody a[href ^="http://"], #mBody a[href ^="gopher://"] { background: url(external.png) center right no-repeat; padding-right: 13px; }
This bug appears not limited to the use of 'no-repeat' for the background property. The test case uses repeat-x as value for background-repeat value in one case (fails) and omits to specify this value in the second case (works).
Summary: css "no-repeat" background image and emoticons not displayed → css "no-repeat" background image and emoticons not displayed on inlines
Attached patch patchSplinter Review
Assignee: roc → dbaron
Status: NEW → ASSIGNED
Attachment #210787 - Flags: superreview?(roc)
Attachment #210787 - Flags: review?(roc)
Attachment #210787 - Flags: superreview?(roc)
Attachment #210787 - Flags: superreview+
Attachment #210787 - Flags: review?(roc)
Attachment #210787 - Flags: review+
Checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Priority: -- → P1
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: