Fix regression of background positioning for inline elements.  b=324960  r+sr=roc